The roles required for the application were defined and created in the database.

--- a/BulkyWeb/BookBazaar.csproj
+++ b/BulkyWeb/BookBazaar.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bulky.DataAccess\BookBazaar.DataAccess.csproj" />
+    <ProjectReference Include="..\Bulky.Utility\BookBazaar.Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
