DBInitializer Implementation has been done.

--- a/Bulky.DataAccess/BookBazaar.DataAccess.csproj
+++ b/Bulky.DataAccess/BookBazaar.DataAccess.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bulky.Models\BookBazaar.Models.csproj" />
+    <ProjectReference Include="..\Bulky.Utility\BookBazaar.Utility.csproj" />
   </ItemGroup>
 
 </Project>
